Force PDF, add comment
